--- a/views/partials/comments.hbs
+++ b/views/partials/comments.hbs
@@ -8,10 +8,13 @@
 <ul>
     {{#each comment}}
     <li>
-        {{content}}
-        <span>
-            Created by {{creator.name}} | Last updated on {{dateFormat updateDate "DD-MM-YYYY"}} 
+        <span class="commentContent">
+            {{content}}
         </span>
+        <span class="commentDate">
+            Created by {{creator.name}} | Submitted on {{dateFormat updateDate "DD-MM-YYYY"}}
+        </span> 
+        
     </li>
     {{/each}}
 </ul>
