--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,9 @@
+@import 'deletion';
 // $font-sans: 'Helvetica Neue',
 // Helvetica,
 // Arial,
 // sans-serif;
+
 $grey: hsl(0, 0, 90%);
 $pistachio: #e4fde1;
 $darkPistachio: #8acb88;
@@ -10,71 +12,71 @@ $darkGrey: #575761;
 $mustardYellow: #ebc379;
 $redBrown: #aa4535;
 * {
-    &,
-    &:before,
-    &:after {
-        box-sizing: border-box;
-    }
+  &,
+  &:before,
+  &:after {
+    box-sizing: border-box;
+  }
 }
 
 body {
-    padding: 0 1em;
-    margin: 0 auto;
-    margin-bottom: 1em;
-    font-family: 'Poppins', sans-serif;
-    line-height: 2;
+  padding: 0 1em;
+  margin: 0 auto;
+  margin-bottom: 1em;
+  font-family: 'Poppins', sans-serif;
+  line-height: 2;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 nav {
-    display: flex;
-    a,
-    button {
-        box-shadow: -2px 2px 2px 2px lightgrey;
-        margin-top: 1em;
-        margin-bottom: 0.5em;
-        max-width: none;
-        padding: 0.2em;
-        border: 0;
-        color: #575761;
-        background-color: #b8d4d3;
-        &:not(:last-child) {
-            margin-right: 1em;
-            background-color: #eca398;
-        }
-        &:first-child {
-            margin-right: auto;
-            background-color: #d1e4ce;
-        }
+  display: flex;
+  a,
+  button {
+    box-shadow: -2px 2px 2px 2px lightgrey;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+    max-width: none;
+    padding: 0.2em;
+    border: 0;
+    color: #575761;
+    background-color: #b8d4d3;
+    &:not(:last-child) {
+      margin-right: 1em;
+      background-color: #eca398;
     }
-    button:hover {
-        padding: 1em;
+    &:first-child {
+      margin-right: auto;
+      background-color: #d1e4ce;
     }
+  }
+  button:hover {
+    padding: 1em;
+  }
 }
 
 h1,
 h2,
 h3,
 p {
-    margin: 0;
-    line-height: inherit;
-    &:not(:last-child) {
-        margin-bottom: 1rem;
-    }
+  margin: 0;
+  line-height: inherit;
+  &:not(:last-child) {
+    margin-bottom: 1rem;
+  }
 }
 
 img {
-    width: 100%;
-    max-width: 100%;
+  width: 100%;
+  max-width: 100%;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 input:not([type='checkbox']),
@@ -84,305 +86,307 @@ textarea,
 select,
 button,
 .btn {
-    border: 1px solid $grey;
-    padding: 0.5em;
-    box-shadow: -2px 2px 2px 2px lightgrey;
-    border-radius: 0;
-    margin-bottom: 1em;
-    font: inherit;
-    color: inherit;
-    background-color: transparent;
-    max-width: fit-content;
+  border: 1px solid $grey;
+  padding: 0.5em;
+  box-shadow: -2px 2px 2px 2px lightgrey;
+  border-radius: 0;
+  margin-bottom: 1em;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  max-width: fit-content;
 }
 
 button:hover {
-    padding: 1em;
-    font-weight: 500;
+  padding: 1em;
+  font-weight: 500;
 }
 
 textarea {
-    min-height: 8em;
-    resize: vertical;
+  min-height: 8em;
+  resize: vertical;
 }
 
 label {
-    margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 #welcome {
-    background-image: url('/flashcards2.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding: 5em;
-    h1 {
-        font-size: 6em;
-    }
-    p {
-        display: flex;
-        font-size: 2.3em;
-        color: $darkGrey;
-    }
-    img {
-        margin-left: 15em;
-    }
-    button {
-        background-color: #ebc379;
-        color: #aa4535;
-    }
+  background-image: url('/flashcards2.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 5em;
+  h1 {
+    font-size: 6em;
+  }
+  p {
+    display: flex;
+    font-size: 2.3em;
+    color: $darkGrey;
+  }
+  img {
+    margin-left: 15em;
+  }
+  button {
+    background-color: #ebc379;
+    color: #aa4535;
+  }
 }
 
 #browse {
-    background-color: rgb(247, 241, 234);
+  background-color: rgb(247, 241, 234);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h2 {
+    margin: 1em;
+    font-size: 3em;
+    color: #404047;
+  }
+  div {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    h2 {
-        margin: 1em;
-        font-size: 3em;
-        color: #404047;
+    form {
+      margin-left: 3em;
+      select {
+        background-color: whitesmoke;
+      }
+      button {
+        background-color: #8acb88;
+        color: whitesmoke;
+        font-weight: 500;
+      }
     }
-    div {
-        display: flex;
-        form {
-            margin-left: 3em;
-            select {
-                background-color: whitesmoke;
-            }
-            button {
-                background-color: #8acb88;
-                color: whitesmoke;
-                font-weight: 500;
-            }
-        }
-    }
-    h4 {
-        color: #404047;
-        font-size: 2em;
-        margin-bottom: 0;
-    }
-    #displayFlashcards {
-        display: flex;
-    }
+  }
+  h4 {
+    color: #404047;
+    font-size: 2em;
+    margin-bottom: 0;
+  }
+  #displayFlashcards {
+    display: flex;
+  }
 }
 
 .card {
-    width: fit-content;
-    max-width: 10em;
-    margin: 0.5em;
-    background-color: #f1cf90;
-    color: #575761;
-    a {
-        background-color: #aa4535;
-        color: whitesmoke;
-        padding: 0.2em;
-    }
+  width: fit-content;
+  max-width: 10em;
+  margin: 0.5em;
+  background-color: #f1cf90;
+  color: #575761;
+  a {
+    background-color: #aa4535;
+    color: whitesmoke;
+    padding: 0.2em;
+  }
 }
 
 #single {
-    max-width: 65em;
-    margin: 0 auto;
+  max-width: 65em;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  #editButtons {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 1em;
+    background-color: #575761;
+    padding: 0.5em;
+    button {
+      background-color: rgb(234, 243, 247);
+      max-width: none;
+      margin: 0.3em 0.5em;
+      padding: 0.1em;
+      box-shadow: -2px 2px 2px 2px rgb(26, 25, 25);
+    }
+  }
+  #comments {
     display: flex;
     flex-direction: column;
-    #editButtons {
-        display: flex;
-        justify-content: flex-start;
-        margin-top: 1em;
-        background-color: #575761;
-        padding: 0.5em;
-        button {
-            background-color: rgb(234, 243, 247);
-            max-width: none;
-            margin: 0.3em 0.5em;
-            padding: 0.1em;
-            box-shadow: -2px 2px 2px 2px rgb(26, 25, 25);
-        }
+    background-color: #575761;
+    padding: 0.5em;
+    button,
+    input {
+      background-color: rgb(234, 243, 247);
+      max-width: none;
+      margin: 0.3em 0.5em;
+      padding: 0.1em;
+      box-shadow: -2px 2px 2px 2px rgb(26, 25, 25);
     }
-    #comments {
-        display: flex;
-        flex-direction: column;
-        background-color: #575761;
-        padding: 0.5em;
-        button,
-        input {
-            background-color: rgb(234, 243, 247);
-            max-width: none;
-            margin: 0.3em 0.5em;
-            padding: 0.1em;
-            box-shadow: -2px 2px 2px 2px rgb(26, 25, 25);
-        }
-        ul {
-            background-color: rgb(234, 243, 247);
-            padding: 1em;
-            margin: 1em;
-            li {
-                list-style-type: none;
-            }
-        }
+    ul {
+      background-color: rgb(234, 243, 247);
+      padding: 1em;
+      margin: 1em;
+      li {
+        list-style-type: none;
+      }
     }
+  }
 }
 
 .cardDisplay {
-    background-color: rgb(247, 241, 234);
-    display: flex;
-    box-shadow: -2px 2px 2px 2px lightgrey;
-    padding: 2em;
-    justify-content: space-around;
-    h1 {
-        color: #404047;
-    }
-    label {
-        background-color: #f1cf90;
-        padding: 0.3em;
-    }
-    button {
-        background-color: #8acb88;
-        color: #f1f7f0;
-        font-weight: 500;
-    }
-    h4 {
-        color: #404047;
-        font-size: 1.5em;
-    }
+  background-color: rgb(247, 241, 234);
+  display: flex;
+  box-shadow: -2px 2px 2px 2px lightgrey;
+  padding: 2em;
+  justify-content: space-around;
+  h1 {
+    color: #404047;
+  }
+  label {
+    background-color: #f1cf90;
+    padding: 0.3em;
+  }
+  button {
+    background-color: #8acb88;
+    color: #f1f7f0;
+    font-weight: 500;
+  }
+  h4 {
+    color: #404047;
+    font-size: 1.5em;
+  }
 }
 
 #profileHeader {
-    background-color: rgb(247, 241, 234);
-    display: flex;
-    box-shadow: -2px 2px 2px 2px lightgrey;
-    padding: 2em;
-    justify-content: space-around;
-    color: #404047;
-    margin-top: 1em;
-    img {
-        max-width: 10em;
-        border-radius: 50px;
-    }
-    h1 {
-        font-size: 3em;
-    }
-    h4 {
-        background-color: #ebc379;
-        padding: 0.2em;
-        text-align: center;
-        letter-spacing: 3px;
-    }
-    p {
-        font-weight: 500;
-        letter-spacing: 2px;
-    }
+  background-color: rgb(247, 241, 234);
+  display: flex;
+  box-shadow: -2px 2px 2px 2px lightgrey;
+  padding: 2em;
+  justify-content: space-around;
+  color: #404047;
+  margin-top: 1em;
+  img {
+    max-width: 10em;
+    border-radius: 50px;
+  }
+  h1 {
+    font-size: 3em;
+  }
+  h4 {
+    background-color: #ebc379;
+    padding: 0.2em;
+    text-align: center;
+    letter-spacing: 3px;
+  }
+  p {
+    font-weight: 500;
+    letter-spacing: 2px;
+  }
 }
 
 #yourCards {
-    font-weight: 500;
-    background-color: #aa4535;
-    color: #f1f7f0;
-    max-width: fit-content;
-    padding: 0.3em;
+  font-weight: 500;
+  background-color: #aa4535;
+  color: #f1f7f0;
+  max-width: fit-content;
+  padding: 0.3em;
 }
 
 #createdCards {
-    background-color: #648381;
-    display: flex;
-    box-shadow: -2px 2px 2px 2px lightgrey;
-    padding: 2em;
-    justify-content: space-around;
-    margin-top: 1em;
-    #singleCard {
-        width: fit-content;
-        max-width: 15em;
-        margin: 0.5em;
-        background-color: #f8e9cc;
-        color: #575761;
-        padding: 0 1em;
-        border: 1px solid whitesmoke;
-        box-shadow: -2px 2px 2px 2px rgb(78, 78, 78);
-        a {
-            font-weight: 500;
-            background-color: #aa4535;
-            color: whitesmoke;
-            padding: 0.2em;
-        }
-        a:hover {
-            padding: 0.5em 1em;
-        }
+  background-color: #648381;
+  display: flex;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  box-shadow: -2px 2px 2px 2px lightgrey;
+  padding: 2em;
+  justify-content: space-around;
+  margin-top: 1em;
+  #singleCard {
+    width: fit-content;
+    max-width: 15em;
+    margin: 0.5em;
+    background-color: #f8e9cc;
+    color: #575761;
+    padding: 0 1em;
+    border: 1px solid whitesmoke;
+    box-shadow: -2px 2px 2px 2px rgb(78, 78, 78);
+    a {
+      font-weight: 500;
+      background-color: #aa4535;
+      color: whitesmoke;
+      padding: 0.2em;
     }
+    a:hover {
+      padding: 0.5em 1em;
+    }
+  }
 }
 
 #feedbackPage {
-    color: #404047;
-    h1 {
-        background-color: #ebc379;
-        margin-top: 1em;
+  color: #404047;
+  h1 {
+    background-color: #ebc379;
+    margin-top: 1em;
+    padding: 0.6em;
+  }
+  p {
+    letter-spacing: 3px;
+    flex-grow: 1;
+    span {
+      font-weight: 500;
+      font-size: 1.1em;
+      background-color: #8acb88;
+      padding: 0.1em;
+    }
+  }
+  h4 {
+    margin-top: 0;
+    margin-left: 2em;
+    letter-spacing: 3px;
+    flex-grow: 1;
+  }
+  div {
+    display: flex;
+    #feedbackPageButtons {
+      margin-left: auto;
+      button {
+        max-width: none;
+        max-height: 3em;
         padding: 0.6em;
+        margin: 0.2em;
+        background-color: #648381;
+        color: #b8d4d3;
+        font-weight: 500;
+      }
     }
-    p {
-        letter-spacing: 3px;
-        flex-grow: 1;
-        span {
-            font-weight: 500;
-            font-size: 1.1em;
-            background-color: #8acb88;
-            padding: 0.1em;
-        }
-    }
-    h4 {
-        margin-top: 0;
-        margin-left: 2em;
-        letter-spacing: 3px;
-        flex-grow: 1;
-    }
-    div {
-        display: flex;
-        #feedbackPageButtons {
-            margin-left: auto;
-            button {
-                max-width: none;
-                max-height: 3em;
-                padding: 0.6em;
-                margin: 0.2em;
-                background-color: #648381;
-                color: #b8d4d3;
-                font-weight: 500;
-            }
-        }
-    }
+  }
 }
 
 #createCard {
-    color: #404047;
-    h1 {
-        font-size: 3em;
-        background-color: #8acb88;
-        margin-bottom: 2em;
+  color: #404047;
+  h1 {
+    font-size: 3em;
+    background-color: #8acb88;
+    margin-bottom: 2em;
+  }
+  #left {
+    text-align: center;
+    label {
+      font-size: 1.3em;
     }
-    #left {
-        text-align: center;
-        label {
-            font-size: 1.3em;
-        }
-        #metaInput {
-            margin-top: 2em;
-            label {
-                font-size: 1em;
-            }
-            select {
-                padding: 0;
-                margin-left: 1em;
-            }
-        }
+    #metaInput {
+      margin-top: 2em;
+      label {
+        font-size: 1em;
+      }
+      select {
+        padding: 0;
+        margin-left: 1em;
+      }
     }
-    #left,
-    #right {
-        margin-top: 1.5em;
-        flex-grow: 1;
-        max-width: 40vw;
-        input {
-            padding: 0;
-            margin-left: 1em;
-        }
-        h5 {
-            font-size: 1.2em;
-            font-weight: 500;
-        }
+  }
+  #left,
+  #right {
+    margin-top: 1.5em;
+    flex-grow: 1;
+    max-width: 40vw;
+    input {
+      padding: 0;
+      margin-left: 1em;
     }
+    h5 {
+      font-size: 1.2em;
+      font-weight: 500;
+    }
+  }
 }
