--- a/views/choicecards/update.hbs
+++ b/views/choicecards/update.hbs
@@ -1,48 +1,52 @@
-<div class="createCard">
-<h1>Edit choicecard</h1>
+<div  class="cardDisplay" id="createCard">
 
-<form method="POST" enctype="multipart/form-data">
-<div>
+  <div id="left"> 
+    <h1>Edit choicecard</h1>
 
-    <p>
-    <label for="question-title">Title</label>
-    <input type="text" id="question-title" name="title" placeholder="Title" value="{{choicecard.questionTitle}}" required/>
-    </p>
-    <p>
-    <label for="question-description">Description:</label>
-    <input type="text" id="question-description" name="description" placeholder="Add more detail..." value="{{choicecard.questionDescription}}" />
-  </p>
-</div>
-  
-   
-<div>
-  <h4>Update Correct Answer</h4>
-  <p>
-   <label for="correctAnswer">Correct Answer:</label>
-  <input type="text" id="correctAnswer" name="correctAnswer" placeholder="The correct answer..." value="{{correctAnswer}}" required/>
-  </p>
+    <form method="POST" enctype="multipart/form-data">
+    <div >
+        <p>
+        <label for="question-title">Title</label>
+        <input type="text" id="question-title" name="title" placeholder="Title" value="{{choicecard.questionTitle}}" required/>
+        </p>
+        <p>
+        <label for="question-description">Description:</label>
+        <input type="text" id="question-description" name="description" placeholder="Add more detail..." value="{{choicecard.questionDescription}}" />
+      </p>
+    </div>
+  </div> 
 
-  <h4>Update Incorrect Answers:</h4>
-  <p>
-    <label for="answer2">Answer 2:</label>
-    <input type="text" id="answer2" name="answer2" placeholder="Second possible answer..." required/>
-  </p>
-  <p>
-     <label for="answer3">Answer 3:</label>
-      <input type="text" id="answer3" name="answer3" placeholder="Third possible answer..." required/>
-  </p>
-  <p>
-    <label for="answer4">Answer 4:</label>
-    <input type="text" id="answer4" name="answer4" placeholder="Fourth possible answer..." required/>  
-  </p>
-</div>
+  <div id="right">
+    <div >
+      <h4>Update Correct Answer</h4>
+      <p>
+      <label for="correctAnswer">Correct Answer:</label>
+      <input type="text" id="correctAnswer" name="correctAnswer" placeholder="The correct answer..." value="{{correctAnswer}}" required/>
+      </p>
 
-          
-<div class="metaInput">
-<label for="question-difficulty">Difficulty on a scale of 1 through 10: </label>
-  <input type="range" min="1" max="10" step="1" id="question-difficulty" name="difficulty" value="{{choicecard.difficulty}}"  required>
-</div>
-  
-  <button type="submit">Submit</button>
-</form>
-</div>
+      <h4>Update Incorrect Answers:</h4>
+      <p>
+        <label for="answer2">Answer 2:</label>
+        <input type="text" id="answer2" name="answer2" placeholder="Second possible answer..." required/>
+      </p>
+      <p>
+        <label for="answer3">Answer 3:</label>
+          <input type="text" id="answer3" name="answer3" placeholder="Third possible answer..." required/>
+      </p>
+      <p>
+        <label for="answer4">Answer 4:</label>
+        <input type="text" id="answer4" name="answer4" placeholder="Fourth possible answer..." required/>  
+      </p>
+    </div>
+
+              
+    <div class="metaInput">
+      <label for="question-difficulty">Difficulty on a scale of 1 through 10: </label>
+      <input type="range" min="1" max="10" step="1" id="question-difficulty" name="difficulty" value="{{choicecard.difficulty}}"  required>
+    </div>
+      
+      <button type="submit">Submit</button>
+  </form>
+  </div>
+</div> 
+
