added styling for deletion view and edited profile view - imported view

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,6 +4,7 @@
 @import 'profile';
 @import 'feedback';
 @import 'create';
+@import 'deletion';
 $grey: hsl(0, 0, 90%);
 $pistachio: #e4fde1;
 $darkPistachio: #8acb88;
