--- a/styles/single.scss
+++ b/styles/single.scss
@@ -73,14 +73,24 @@ $darkGrey: #575761;
 $mustardYellow: #ebc379;
 $redBrown: #aa4535;
 .card {
-    width: fit-content;
-    max-width: 10em;
-    margin: 0.5em;
+    min-width: 20em;
+    min-height: 10em;
+    margin: 1.5em 2em;
     background-color: #f1cf90;
     color: #575761;
     a {
         background-color: #aa4535;
         color: whitesmoke;
         padding: 0.2em;
+        margin-bottom: 2em;
+    }
+    small {
+        margin-top: 5em;
+    }
+    .hiddenQuestion {
+        display: none;
+    }
+    .questionTitle:hover+.hiddenQuestion {
+        display: block;
     }
 }
