implemented resetErrorVote, highscore bug fixed

--- a/views/choicecards/single.hbs
+++ b/views/choicecards/single.hbs
@@ -46,21 +46,23 @@
 </div>
 
 
-<div id="editButtons">
-    {{#if user}}
-    <form action="/choicecard/{{choicecard._id}}/upvote" method="POST"><button>Upvote!</button></form>
-    <form action="/choicecard/{{choicecard._id}}/errorvote" method="POST"><button>Flag an Error!</button></form>
-    {{#if isCreator}}
-    <button><a href="/choicecard/{{choicecard._id}}/delete">Delete this flashcard</a></button>
-    <button><a href="/choicecard/{{choicecard._id}}/update">Edit this flashcard</a></button>
-    {{/if}}
-    {{/if}}
-</div>
+{{#if user}}
+    <div id="editButtons">
+            <form action="/choicecard/{{choicecard._id}}/upvote" method="POST"><button>Upvote!</button></form>
+            <form action="/choicecard/{{choicecard._id}}/errorvote" method="POST"><button>Flag an Error!</button></form>
+        {{#if isCreator}}
+            <button><a href="/choicecard/{{choicecard._id}}/delete">Delete this flashcard</a></button>
+            <button><a href="/choicecard/{{choicecard._id}}/update">Edit this flashcard</a></button>
+            <form action="/choicecard/{{choicecard._id}}/reset-errors" method='POST'><button>Reset the error votes</button></form>
+        {{/if}}
+    </div>
+{{/if}}
 
-
-<div id="comments">
-    {{> comments}}
-</div>
+{{#if user}}
+    <div id="comments">
+        {{> comments}}
+    </div>
+{{/if}}
 
 
 
