--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,6 +5,8 @@
 @import 'feedback';
 @import 'create';
 @import 'deletion';
+@import 'reminders';
+@import 'signIn';
 $grey: hsl(0, 0, 90%);
 $pistachio: #e4fde1;
 $darkPistachio: #8acb88;
