--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -5,6 +5,12 @@
   {{/if}}
 </div>
 
+<div class="signIn">
+  <div>
+    <h1>Sign Up</h1>
+    <img src="/contract.svg" alt="signUpIcon" height="100">
+  </div>
+  
 <form action="/authentication/sign-up" method="POST" enctype="multipart/form-data">
   <label for="input-name">Name</label>
   <input type="text" id="input-name" name="name" placeholder="Your Name" required />
@@ -33,3 +39,4 @@
   <input type="password" name="password" id="input-password" placeholder="A Strong Password" required/>
   <button>Sign Up</button>
 </form>
+</div>
