--- a/styles/signIn.scss
+++ b/styles/signIn.scss
@@ -24,17 +24,20 @@ $redBrown: #aa4535;
             min-width: 10em;
         }
     }
-    label {
-        background-color: #8acb88;
-        color: #e4fde1;
-        padding: 0em 0.5em;
-    }
-    input,
-    select {
-        color: #f7fdf6;
-    }
-    button {
-        background-color: #aa4535;
-        color: #f7fdf6;
+    form {
+        label {
+            background-color: #8acb88;
+            color: #e4fde1;
+            padding: 0em 0.5em;
+            max-width: fit-content;
+        }
+        input,
+        select {
+            background-color: white;
+        }
+        button {
+            background-color: #aa4535;
+            color: #f7fdf6;
+        }
     }
 }
