--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,6 +7,7 @@
 @import 'deletion';
 @import 'reminders';
 @import 'signIn';
+@import 'leaderboard';
 $grey: hsl(0, 0, 90%);
 $pistachio: #e4fde1;
 $darkPistachio: #8acb88;
