--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,6 +9,8 @@
 
 <button><a href="/randomchoicecard">Random Choicecard</a></button>
 <button><a href="/browsechoicecards">Browse Choicecards</a></button>
+<button><a href="/leaderboard">Leader Board</a></button>
+
 </div>
 
 
