--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -30,6 +30,9 @@ $redBrown: #aa4535;
         font-weight: 500;
         letter-spacing: 2px;
     }
+    #userHighscore {
+        background-color: #fff243;
+    }
 }
 
 #yourCards {
