--- a/views/private.hbs
+++ b/views/private.hbs
@@ -7,7 +7,7 @@
     <div id="stats">
         <img src="/growth.svg" alt="stats" height="120">
         <h4> Stats:</h4>
-        <p>Highscore: {{user.highscore}}</p>
+        <p id="userHighscore">Highscore: {{user.highscore}}</p>
         <p>Current Correct Answer Streak: {{user.correctAnswerStreak}} </p>
 <p id="reminders">
     <img src="/reminders.svg" alt="reminderIcon" height="80">
