--- a/styles/signIn.scss
+++ b/styles/signIn.scss
@@ -22,14 +22,20 @@ $redBrown: #aa4535;
             padding: 0.3em;
             letter-spacing: 3px;
             min-width: 10em;
+            margin-top: 2em;
+            text-align: center;
+            img {
+                margin: 1em;
+            }
         }
     }
     form {
         label {
             background-color: #8acb88;
             color: #e4fde1;
-            padding: 0em 0.5em;
+            padding: 0.3em 0.5em;
             max-width: fit-content;
+            margin: 0.2em 0.3em 0.3em 0em;
         }
         input,
         select {
