--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -12,11 +12,17 @@
   </div>
   
 <form action="/authentication/sign-up" method="POST" enctype="multipart/form-data">
+<span>
   <label for="input-name">Name</label>
   <input type="text" id="input-name" name="name" placeholder="Your Name" required />
+</span>
+  
+<span>      
+  
+  <label for="input-email">Email</label>
+        <input type="email" id="input-email" name="email" placeholder="Your Email" required/>
 
-      <label for="input-email">Email</label>
-      <input type="email" id="input-email" name="email" placeholder="Your Email" required/>
+</span>
 
     {{!-- Make one of the radio inputs required. If full time - true value to be sent --}}
     <span>
@@ -32,7 +38,6 @@
         </label>
     </span>
 
-</span>
 
 <span>
     <label for="start">Bootcamp date</label>
