changed choicecard to flashcard

--- a/views/browse.hbs
+++ b/views/browse.hbs
@@ -1,6 +1,6 @@
 <div id="browse">
   
-  <h2>Browse Choicecards</h2>
+  <h2>Browse Flashcards</h2>
 <div>
 <img src="/research.svg" alt="browseIcon" height="150">
 <form method="POST">
