--- a/views/choicecards/create.hbs
+++ b/views/choicecards/create.hbs
@@ -1,7 +1,7 @@
 <div class="cardDisplay" id="createCard">
 
 <div id="left">
-  <h1>Create a Choicecard</h1>
+  <h1>Create a Flashcard</h1>
 
     <form method="POST" >
       <p><label for="question-title">Title</label>
