--- a/views/choicecards/update.hbs
+++ b/views/choicecards/update.hbs
@@ -1,7 +1,7 @@
 <div  class="cardDisplay" id="createCard">
 
   <div id="left"> 
-    <h1>Edit choicecard</h1>
+    <h1>Edit Flashcard</h1>
 
     <form method="POST" enctype="multipart/form-data">
     <div >
