--- a/views/reminders.hbs
+++ b/views/reminders.hbs
@@ -1,6 +1,6 @@
 
 <div id="remindersConatiner">
-<h1> <span>Your reminders</span> <img src="/reminders.svg" alt="remindersIcon"  width="100" height="50"></h1>
+<h1> <span>My reminders</span> <img src="/reminders.svg" alt="remindersIcon"  width="100" height="50"></h1>
 
 <div>
     {{#if reminders}}
