--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,8 +7,8 @@
 <div id="homeButtons">
      <img src="/development.svg" alt="icon" height="120" width="120">
 
-<button><a href="/randomchoicecard">Random Choicecard</a></button>
-<button><a href="/browsechoicecards">Browse Choicecards</a></button>
+<button><a href="/randomchoicecard">Random Flashcard</a></button>
+<button><a href="/browsechoicecards">Browse Flashcards</a></button>
 <button><a href="/leaderboard">Leader Board</a></button>
 
 </div>
