--- a/views/sign-in.hbs
+++ b/views/sign-in.hbs
@@ -9,7 +9,7 @@
   <label for="input-email">Email</label>
   <input type="email" id="input-email" name="email" placeholder="Your Email" />
   <label for="input-password">Password</label>
-  <input type="password" name="password" id="input-password" placeholder="A Strong Password" />
+  <input type="password" name="password" id="input-password" placeholder="Password" />
   <button>Sign In</button>
 </form>
 </div>
