--- a/styles/feedback.scss
+++ b/styles/feedback.scss
@@ -34,7 +34,7 @@ $redBrown: #aa4535;
             margin-left: auto;
             button {
                 max-width: none;
-                max-height: 3em;
+                max-height: fit-content;
                 padding: 0.6em;
                 margin: 0.2em;
                 background-color: #648381;
