--- a/styles/home.scss
+++ b/styles/home.scss
@@ -33,5 +33,7 @@ $redBrown: #aa4535;
         background-color: #ebc379;
         color: #aa4535;
         font-weight: 500;
+        padding: 1em;
+        font-size: 1.2em;
     }
 }
