--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -31,7 +31,8 @@ $redBrown: #aa4535;
         letter-spacing: 2px;
     }
     #userHighscore {
-        background-color: #fff243;
+        background-color: #ece1a4;
+        text-align: center;
     }
 }
 
