--- a/styles/reminders.scss
+++ b/styles/reminders.scss
@@ -28,24 +28,40 @@ $redBrown: #aa4535;
         color: #44444b;
         justify-content: center;
         padding: 2em;
-        box-shadow: -2px 2px 2px 2px rgb(170, 160, 160);
+        // box-shadow: -2px 2px 2px 2px rgb(170, 160, 160);
         .reminder {
             display: flex;
             flex-direction: column;
+            align-items: center;
             margin: 1em;
-            background-color: #648381;
+            // background-color: #648381;
+            background-image: url('/post-it.svg');
+            background-repeat: no-repeat;
             color: #f5f8f5;
-            padding: 1em;
-            box-shadow: -2px 2px 2px 2px rgb(170, 160, 160);
+            //padding: 1em;
+            min-width: 18em;
+            min-height: 20em;
+            max-width: 18em;
+            //box-shadow: -2px 2px 2px 2px rgb(170, 160, 160);
+            text-align: center;
             h3 {
                 font-weight: 500;
-                background-color: #aa4535;
-                color: #f5eee1;
-                padding: 0.3em;
+                color: #aa4535;
+                padding: 0em;
+                margin-bottom: 0;
+                text-align: center;
+            }
+            p {
+                margin: 0;
+                //background-color: #daceb8;
+                color: #44444b;
+                font-weight: 500;
+                padding: 0em 0.3em;
             }
             button {
                 background-color: #8acb88;
                 color: #575761;
+                padding: 0.3em;
                 font-weight: 500;
             }
         }
