--- a/views/choicecards/feedback.hbs
+++ b/views/choicecards/feedback.hbs
@@ -13,15 +13,19 @@
         <button>Next</button>
         </form>
 
+   
         {{#if isReminder}}
-         <form action="/choicecard/removeReminder/{{cardId}}" method="POST">
-        <button>Remove Reminder!</button>
-        </form>
+            {{#if correct}}
+            <form action="/choicecard/removeReminder/{{cardId}}" method="POST">
+            <button>Remove Reminder!</button>
+            </form>
+            {{/if}}
         {{else}}
         <form action="/choicecard/remind/{{cardId}}" method="POST">
         <button>Remind me!</button>
         </form>
         {{/if}}
+    
 
     </div>
 
